--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,9 @@ table{
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  overflow-x:hidden
 }
+
 table thead tr th{
   text-align: center;
 }
@@ -25,6 +27,13 @@ table tbody{
 }
 table tbody tr{
   margin: 35px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-direction: column;
+  background: rgb(0,2,3);
+  background: linear-gradient(135deg, rgba(0,2,3,1) 30%, rgba(255,255,255,1) 100%);  
+  border-style: solid;
 }
 table tbody tr .attributes{
   display: flex;
